--- a/mac_environment.yml
+++ b/mac_environment.yml
@@ -5,11 +5,13 @@ channels:
   - default
   - defaults
 dependencies:
+  - _anaconda_depends=2020.07=py38_0
   - _ipyw_jlab_nb_ext_conf=0.1.0=py38_0
+  - _pytorch_select=0.1=cpu_0
   - alabaster=0.7.12=py_0
-  - anaconda=2020.11=py38_0
+  - anaconda=custom=py38_1
   - anaconda-client=1.7.2=py38_0
-  - anaconda-navigator=1.10.0=py38_0
+  - anaconda-navigator=2.0.3=py38_0
   - anaconda-project=0.8.4=py_0
   - applaunchservices=0.2.1=py_0
   - appnope=0.1.0=py38_1001
@@ -44,18 +46,21 @@ dependencies:
   - bottleneck=1.3.2=py38hf1fa96c_1
   - brotlipy=0.7.0=py38haf1e3a3_1000
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=pyhd3eb1b0_3
+  - ca-certificates=2021.5.30=h033912b_0
+  - certifi=2021.5.30=py38h50d1736_0
   - cffi=1.14.3=py38hed5b41f_0
   - chardet=3.0.4=py38_1003
   - click=7.1.2=py_0
   - cloudpickle=1.6.0=py_0
   - clyent=1.2.2=py38_1
   - colorama=0.4.4=py_0
-  - conda=4.9.2=py38hecd8cb5_0
+  - conda=4.10.1=py38h50d1736_0
   - conda-build=3.20.5=py38_1
+  - conda-content-trust=0.1.3=pyhd8ed1ab_0
   - conda-env=2.6.0=1
   - conda-package-handling=1.7.2=py38h22f3db7_0
+  - conda-repo-cli=1.0.4=pyhd3eb1b0_0
+  - conda-token=0.3.0=pyhd3eb1b0_0
   - conda-verify=3.4.2=py_1
   - contextlib2=0.6.0.post1=py_0
   - cryptography=3.1.1=py38hddc9c9b_0
@@ -139,6 +144,8 @@ dependencies:
   - libiconv=1.16=h1de35cc_0
   - liblief=0.10.1=h0a44026_0
   - libllvm10=10.0.1=h76017ad_5
+  - libllvm9=9.0.1=h7475705_1
+  - libmklml=2019.0.5=0
   - libpng=1.6.37=ha441bb4_0
   - libsodium=1.0.18=h1de35cc_0
   - libspatialindex=1.9.3=h0a44026_0
@@ -176,17 +183,16 @@ dependencies:
   - ncurses=6.2=h0a44026_1
   - nest-asyncio=1.4.2=pyhd3eb1b0_0
   - networkx=2.5=py_0
+  - ninja=1.10.2=hf7b0b51_1
   - nltk=3.5=py_0
   - nose=1.3.7=py38_1004
   - notebook=6.1.4=py38_0
   - numba=0.51.2=py38h6440ff4_1
   - numexpr=2.7.1=py38hce01a72_0
-  - numpy=1.19.2=py38h456fd55_0
-  - numpy-base=1.19.2=py38hcfb5961_0
   - numpydoc=1.1.0=pyhd3eb1b0_1
   - olefile=0.46=py_0
   - openpyxl=3.0.5=py_0
-  - openssl=1.1.1h=haf1e3a3_0
+  - openssl=1.1.1k=h0d85af4_0
   - packaging=20.4=py_0
   - pandas=1.1.3=py38hb1e8313_0
   - pandoc=2.11=h0dc7051_0
@@ -236,6 +242,8 @@ dependencies:
   - python-language-server=0.35.1=py_0
   - python-libarchive-c=2.9=py_0
   - python.app=2=py38_10
+  - python_abi=3.8=1_cp38
+  - pytorch=1.7.1=cpu_py38hb87dcc5_0
   - pytz=2020.1=py_0
   - pywavelets=1.1.1=py38haf1e3a3_2
   - pyyaml=5.3.1=py38haf1e3a3_1
@@ -253,7 +261,6 @@ dependencies:
   - rtree=0.9.4=py38_1
   - ruamel_yaml=0.15.87=py38haf1e3a3_1
   - scikit-image=0.17.2=py38h81aa140_0
-  - scipy=1.5.2=py38h2515648_0
   - seaborn=0.11.0=py_0
   - send2trash=1.5.0=py38_0
   - setuptools=50.3.1=py38hecd8cb5_1
@@ -261,6 +268,7 @@ dependencies:
   - singledispatch=3.4.0.3=py_1001
   - sip=4.19.8=py38h0a44026_0
   - six=1.15.0=py38hecd8cb5_0
+  - snappy=1.1.8=h4a8c4bd_3
   - snowballstemmer=2.0.0=py_0
   - sortedcollections=1.2.1=py_0
   - sortedcontainers=2.2.2=py_0
@@ -280,6 +288,7 @@ dependencies:
   - sqlite=3.33.0=hffcf06c_0
   - statsmodels=0.12.0=py38haf1e3a3_0
   - sympy=1.6.2=py38hecd8cb5_1
+  - tbb=2021.2.0=hf7b0b51_0
   - tblib=1.7.0=py_0
   - terminado=0.9.1=py38_0
   - testpath=0.4.4=py_0
@@ -291,6 +300,7 @@ dependencies:
   - tornado=6.0.4=py38h1de35cc_1
   - tqdm=4.50.2=py_0
   - traitlets=5.0.5=py_0
+  - typing-extensions=3.7.4.3=0
   - typing_extensions=3.7.4.3=py_0
   - ujson=4.0.1=py38hb1e8313_0
   - unicodecsv=0.14.1=py38_0
@@ -302,7 +312,6 @@ dependencies:
   - werkzeug=1.0.1=py_0
   - wheel=0.35.1=py_0
   - widgetsnbextension=3.5.1=py38_0
-  - wrapt=1.11.2=py38h1de35cc_0
   - wurlitzer=2.0.1=py38_0
   - xlrd=1.2.0=py_0
   - xlsxwriter=1.3.7=py_0
@@ -321,13 +330,51 @@ dependencies:
   - zope.interface=5.1.2=py38haf1e3a3_0
   - zstd=1.4.5=h41d2c2f_0
   - pip:
+    - absl-py==0.12.0
     - appdirs==1.4.4
+    - astunparse==1.6.3
+    - cachetools==4.2.2
     - cmake==3.18.4.post1
+    - deepsurvk==0.2.0
     - distlib==0.3.1
     - ecos==2.0.7.post1
+    - flatbuffers==1.12
+    - gast==0.4.0
+    - google-auth==1.30.1
+    - google-auth-oauthlib==0.4.4
+    - google-pasta==0.2.0
+    - grpcio==1.34.1
+    - keras-nightly==2.5.0.dev2021032900
+    - keras-preprocessing==1.1.2
+    - keras-tuner==1.0.2
+    - markdown==3.3.4
+    - numpy==1.18.0
+    - oauthlib==3.1.1
+    - opt-einsum==3.3.0
     - osqp==0.6.2.post0
+    - progressbar==2.5
+    - protobuf==3.17.2
+    - pyarrow==4.0.1
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pydot==1.4.2
+    - pysurvival==0.1.2
+    - python-graphviz==0.16
     - qdldl==0.1.5.post0
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
     - scikit-learn==0.24.1
     - scikit-survival==0.15.0.post0
+    - scipy==1.4.1
+    - sklearn==0.0
+    - tabulate==0.8.9
+    - tensorboard==2.5.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.0
+    - tensorflow==2.5.0
+    - tensorflow-estimator==2.5.0
+    - termcolor==1.1.0
+    - terminaltables==3.1.0
     - virtualenv==20.4.3
+    - wrapt==1.12.1
 prefix: /Users/katyscott/opt/anaconda3/envs/deepicc
