--- a/linux_environment.yml
+++ b/linux_environment.yml
@@ -1,6 +1,7 @@
 name: deepicc
 channels:
   - sebp
+  - anaconda
   - pytorch
   - bioconda
   - conda-forge
@@ -11,6 +12,9 @@ dependencies:
   - _tflow_select=2.3.0=mkl
   - absl-py=0.13.0=pyhd8ed1ab_0
   - aiohttp=3.7.4.post0=py39h3811e60_0
+  - aiohttp-cors=0.7.0=py_0
+  - aioredis=1.3.1=py_0
+  - alembic=1.6.5=pyhd8ed1ab_0
   - anaconda-client=1.7.2=pyhd8ed1ab_1
   - anaconda-navigator=2.0.4=py39_0
   - anyio=3.3.0=py39hf3d152e_0
@@ -29,6 +33,7 @@ dependencies:
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bleach=4.0.0=pyhd8ed1ab_0
+  - blessings=1.7=py39hf3d152e_1004
   - blinker=1.4=py_1
   - blosc=1.21.0=h9c3ff4c_0
   - brotli=1.0.9=h7f98852_5
@@ -46,9 +51,15 @@ dependencies:
   - charls=2.2.0=h9c3ff4c_0
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
   - click=8.0.1=py39hf3d152e_0
+  - cliff=3.8.0=pyhd8ed1ab_0
   - cloudpickle=1.6.0=py_0
   - clyent=1.2.2=py_1
+  - cmaes=0.8.2=pyh44b312d_0
   - cmake=3.20.1=h541d2ed_0
+  - cmd2=2.1.2=py39hf3d152e_0
+  - colorama=0.4.4=py_0
+  - colorful=0.5.4=pyhd8ed1ab_0
+  - colorlog=5.0.1=py39hf3d152e_0
   - conda=4.10.3=py39hf3d152e_0
   - conda-content-trust=0.1.3=pyhd8ed1ab_0
   - conda-package-handling=1.7.3=py39h3811e60_0
@@ -69,6 +80,7 @@ dependencies:
   - et_xmlfile=1.0.1=py_1001
   - expat=2.4.1=h9c3ff4c_0
   - ffmpeg=4.3=hf484d3e_0
+  - filelock=3.0.12=py_0
   - fontconfig=2.13.1=hba837de_1005
   - formulaic=0.2.4=pyhd8ed1ab_0
   - freetype=2.10.4=h0708190_1
@@ -81,14 +93,19 @@ dependencies:
   - glib-tools=2.68.3=h9c3ff4c_0
   - gmp=6.2.1=h58526e2_0
   - gnutls=3.6.13=h85f3911_1
+  - google-api-core=1.31.1=pyhd8ed1ab_0
   - google-auth=1.34.0=pyh6c4a22f_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=pyh8c360ce_0
+  - googleapis-common-protos=1.53.0=py39hf3d152e_0
+  - gpustat=0.6.0=pyhd8ed1ab_1
+  - greenlet=1.1.1=py39he80948d_0
   - grpcio=1.38.1=py39hff7568b_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=h28cd5cc_2
   - h5py=2.10.0=nompi_py39h98ba4bc_106
   - hdf5=1.10.6=nompi_h7c3c948_1111
+  - hiredis=1.1.0=py39h07f9747_1
   - icu=58.2=hf484d3e_1000
   - idna=3.1=pyhd3deb0d_0
   - imagecodecs=2021.6.8=py39h581e88b_0
@@ -96,8 +113,10 @@ dependencies:
   - importlib-metadata=4.6.3=py39hf3d152e_0
   - interface_meta=1.2.3=pyhd8ed1ab_0
   - ipykernel=5.5.3=py39hef51801_0
+  - ipympl=0.7.0=pyhd8ed1ab_0
   - ipython=7.22.0=py39hef51801_0
   - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.6.5=pyhd8ed1ab_0
   - jdcal=1.4.1=py_0
   - jedi=0.18.0=py39hf3d152e_2
   - jinja2=3.0.1=pyhd8ed1ab_0
@@ -112,8 +131,10 @@ dependencies:
   - jupyterlab=3.0.14=pyhd8ed1ab_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
   - jupyterlab_server=2.6.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.0.2=pyhd8ed1ab_0
   - jxrlib=1.1=h7f98852_2
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
+  - keras-tuner=1.0.3=pyhd8ed1ab_0
   - kiwisolver=1.3.1=py39h1a9c180_1
   - krb5=1.19.2=hcc1bbae_0
   - lame=3.100=h7f98852_1001
@@ -151,6 +172,7 @@ dependencies:
   - llvm-openmp=12.0.1=h4bd325d_1
   - locket=0.2.0=py_2
   - lz4-c=1.9.3=h9c3ff4c_1
+  - mako=1.1.4=pyh44b312d_0
   - markdown=3.3.4=pyhd8ed1ab_0
   - markupsafe=2.0.1=py39h3811e60_0
   - matplotlib=3.4.1=py39hf3d152e_0
@@ -160,6 +182,7 @@ dependencies:
   - mkl-service=2.4.0=py39h3811e60_0
   - mkl_fft=1.3.0=py39h42c9631_2
   - mkl_random=1.2.2=py39hde0f152_0
+  - msgpack-python=1.0.2=py39h1a9c180_1
   - multidict=5.1.0=py39h3811e60_1
   - navigator-updater=0.2.1=py39h06a4308_0
   - nbclassic=0.3.1=pyhd8ed1ab_1
@@ -175,13 +198,17 @@ dependencies:
   - numexpr=2.7.3=py39hde0f152_0
   - numpy=1.20.3=py39hf144106_0
   - numpy-base=1.20.3=py39h74d4b33_0
+  - nvidia-ml=7.352.0=py_0
   - oauthlib=3.1.1=pyhd8ed1ab_0
   - olefile=0.46=pyh9f0ad1d_1
+  - opencensus=0.7.13=pyhd8ed1ab_0
+  - opencensus-context=0.1.2=py39hf3d152e_4
   - openh264=2.1.1=h780b84a_0
   - openjpeg=2.4.0=hf7af979_0
   - openpyxl=3.0.7=pyhd8ed1ab_0
-  - openssl=1.1.1k=h7f98852_0
+  - openssl=1.1.1l=h7f98852_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
+  - optuna=2.9.1=pyhd8ed1ab_0
   - osqp=0.6.2=py39hde0f152_1
   - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.2.4=py39hde0f152_0
@@ -190,12 +217,14 @@ dependencies:
   - parso=0.8.2=pyhd8ed1ab_0
   - partd=1.2.0=pyhd8ed1ab_0
   - patsy=0.5.1=py_0
+  - pbr=5.6.0=pyhd8ed1ab_0
   - pcre=8.45=h9c3ff4c_0
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
   - pillow=8.3.1=py39h2c7a002_0
   - pip=21.2.3=pyhd8ed1ab_0
   - pooch=1.4.0=pyhd8ed1ab_0
+  - prettytable=2.1.0=pyhd8ed1ab_0
   - prometheus_client=0.11.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.19=pyha770c72_0
   - protobuf=3.17.2=py39he80948d_0
@@ -206,15 +235,18 @@ dependencies:
   - pyasn1-modules=0.2.7=py_0
   - pycosat=0.6.3=py39h3811e60_1006
   - pycparser=2.20=pyh9f0ad1d_2
+  - pydantic=1.8.2=py39h3811e60_0
   - pygments=2.9.0=pyhd8ed1ab_0
   - pyjwt=2.1.0=pyhd8ed1ab_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyperclip=1.8.2=pyhd8ed1ab_2
   - pyqt=5.9.2=py39h2531618_6
   - pyrsistent=0.17.3=py39h3811e60_2
   - pysocks=1.7.1=py39hf3d152e_3
   - python=3.9.6=h49503c6_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-editor=1.0.4=py_0
   - python-flatbuffers=2.0=pyhd8ed1ab_0
   - python_abi=3.9=2_cp39
   - pytorch=1.9.0=py3.9_cuda10.2_cudnn7.6.5_0
@@ -226,7 +258,10 @@ dependencies:
   - qdldl-python=0.1.5=py39hde0f152_1
   - qt=5.9.7=h5867ecd_1
   - qtpy=1.9.0=py_0
+  - ray-core=1.4.0=py39h714431f_1
+  - ray-tune=1.4.0=py39hf3d152e_1
   - readline=8.1=h46c0cb4_0
+  - redis-py=3.5.3=py_0
   - requests=2.26.0=pyhd8ed1ab_0
   - requests-oauthlib=1.3.0=pyh9f0ad1d_0
   - requests-unixsocket=0.2.0=py_0
@@ -240,22 +275,28 @@ dependencies:
   - seaborn=0.11.1=hd8ed1ab_1
   - seaborn-base=0.11.1=pyhd8ed1ab_1
   - send2trash=1.7.1=pyhd8ed1ab_0
+  - setproctitle=1.1.10=py39h3811e60_1004
   - setuptools=49.6.0=py39hf3d152e_3
   - sip=4.19.13=py39h2531618_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.8=he1b5a44_3
   - sniffio=1.2.0=py39hf3d152e_1
+  - sqlalchemy=1.4.22=py39h3811e60_0
   - sqlite=3.36.0=h9cd32fc_0
   - statsmodels=0.12.2=py39hce5d2b2_0
+  - stevedore=3.3.0=py39hf3d152e_1
+  - tabulate=0.8.9=pyhd8ed1ab_0
   - tbb=2021.3.0=h4bd325d_0
   - tensorboard=2.5.0=pyhd8ed1ab_0
   - tensorboard-data-server=0.6.0=py39h3da14fd_0
   - tensorboard-plugin-wit=1.8.0=pyh44b312d_0
+  - tensorboardx=2.2=pyhd8ed1ab_0
   - tensorflow=2.4.1=mkl_py39h4683426_0
   - tensorflow-base=2.4.1=mkl_py39h43e0292_0
   - tensorflow-estimator=2.5.0=pyh81a9013_1
   - termcolor=1.1.0=py_2
   - terminado=0.10.1=py39hf3d152e_0
+  - terminaltables=3.1.0=py_0
   - testpath=0.5.0=pyhd8ed1ab_0
   - threadpoolctl=2.2.0=pyh8a188c0_0
   - tifffile=2021.4.8=pyhd8ed1ab_0
@@ -276,6 +317,7 @@ dependencies:
   - websocket-client=0.57.0=py39hf3d152e_4
   - werkzeug=2.0.1=pyhd8ed1ab_0
   - wheel=0.36.2=pyhd3deb0d_0
+  - widgetsnbextension=3.5.1=py39hf3d152e_4
   - wrapt=1.12.1=py39h3811e60_3
   - xlrd=2.0.1=pyhd8ed1ab_3
   - xmltodict=0.12.0=py_0
