Updated to ignore some data and random code

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ __pycache__/
 .DS_Store
 ckpts*/
 cox_experiments/
+mnist_data/
+*.pkl
+getTrainTestfiles.py
+image_preprocessing/imagecounts.mat
+image_preprocessing/rearrangeMCRC.m
+image_preprocessing/tumorcounts.mat
+lenet5_pytorch.ipynb
